<resources>
    <string name="app_name">Party app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_scan">Scan Guests</string>
    <string name="nav_addGuest">Invite Guests</string>
    <string name="nav_guestlist">Guest List</string>
    <string name="nav_about">About</string>

    <string name="hint_name">Party Name</string>
    <string name="hint_date">Party Date</string>
    <string name="hint_time">Party Time</string>
    <string name="hint_location">Party Address</string>
    <string name="btn_enter">Enter</string>
    <string name="err_msg_number">Please enter valid number</string>
    <string name="err_msg_name">Please enter name</string>
    <string name="err_msg_date">Please enter date</string>
    <string name="err_msg_time">Please enter time</string>
    <string name="err_msg_location">Please enter a location</string>

    <string name="findContact">Me</string>
    <string name="hint_guest_name">Guest Name</string>
    <string name="hint_guest_number">Guest Phone #</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    </resources>
