<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@mipmap/ic_scanner"
            android:title="@string/nav_scan" />
        <item
            android:id="@+id/nav_guestlist"
            android:icon="@mipmap/ic_contacts_black_24dp"
            android:title="@string/nav_guestlist" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@mipmap/ic_person_add_black_24dp"
            android:title="@string/nav_addGuest" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
