<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp"
        android:background="#d3d3d3">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_name"
                android:maxLines="1"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_date"
                android:maxLines="1"
                android:hint="@string/hint_date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_time"
                android:maxLines="1"
                android:hint="@string/hint_time" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_location"
                android:maxLines="1"
                android:hint="@string/hint_location" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_enter"
            android:text = "@string/btn_enter"
            android:layout_marginTop="40dp"
            android:background="@color/btn_login_bg"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>